Add code editor and styles

--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/parser": "^7.16.8",
+    "@babel/traverse": "^7.16.8",
+    "@monaco-editor/react": "3.7.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/babel__traverse": "^7.14.2",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.17",
+    "@types/prettier": "^2.4.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
+    "monaco-editor": "0.31.1",
+    "monaco-jsx-highlighter": "^1.1.8",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
