--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,19 +1,29 @@
 {
-  "name": "cli",
+  "name": "jsnote-robin",
   "version": "1.0.0",
   "description": "",
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "bin": "dist/index.js",
   "scripts": {
-    "start": "tsc --watch --preserveWatchOutput"
+    "start": "tsc --watch --preserveWatchOutput",
+    "prepublishOnly": "esbuild src/index.ts --platform=node --outfile=dist/index.js --bundle --minify --define:process.env.NODE_ENV=\\\"production\\\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commander": "^9.0.0",
-    "local-api": "^1.0.0"
+    "@jsnote-robin/local-client": "^1.0.0"
   },
   "devDependencies": {
+    "@jsnote-robin/local-api": "^1.0.0",
+    "commander": "^9.0.0",
     "@types/node": "^17.0.13",
+    "esbuild": "0.8.26",
     "typescript": "^4.5.5"
   }
 }
