--- a/packages/local-client/package.json
+++ b/packages/local-client/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "local-client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+  "name": "@jsnote-robin/local-client",
+  "version": "1.0.0",
+  "files": [
+    "build"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
     "@babel/parser": "^7.16.8",
     "@babel/traverse": "^7.16.8",
     "@fortawesome/fontawesome-free": "^5.15.4",
@@ -41,7 +46,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
     "extends": [
