--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -23,9 +23,9 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@jsnote-robin/local-client": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "http-proxy-middleware": "^2.0.2",
-    "@jsnote-robin/local-client": "^0.1.0"
+    "http-proxy-middleware": "^2.0.2"
   }
 }
